[package]
name = "carolina_js_sandbox"
version = "1.0.0"
description = "A lightweight beginner-friendly JavaScript sandbox by Carolina Codeworks."
authors = ["Carolina Codeworks"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "carolina_js_sandbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
